Refactor BannedIpRepositoryTest to use getFirst() for improved readability in assertions